option java_package = "raptor.protobuf";
option java_outer_classname = "Messages";

message Index {
    required string index = 1;
    required string field = 2;
    required string term = 3;
    required string value = 4;
    required string partition = 5;
    required bool   ifnewer = 6;
    required bytes  props = 7;
    required string key_clock = 8;
}

message Stream {
    required string index = 1;
    required string field = 2;
    required string term = 3;
    required string partition = 4;
}

message Info {
    required string index = 1;
    required string field = 2;
    required string term = 3;
    required string partition = 4;
}

message InfoRange {
    required string index = 1;
    required string field = 2;
    required string start_term = 3;
    required string end_term = 4;
    required string partition = 5;
}

message CatalogQuery {
    required string search_query = 1;
    required int64 max_results = 2;
}

message MultiStream {
    required string term_list = 1;
}

message Command {
    required string command = 1;
    optional string arg1 = 2;
    optional string arg2 = 3;
    optional string arg3 = 4;
}

message DeleteEntry {
    required string index = 1;
    required string field = 2;
    required string term = 3;
    required string doc_id = 4;
    required string partition = 5;
}

message StreamResponse {
    required string value = 1;
    required bytes  props = 2;
    optional bytes  key_clock = 3;
}

message InfoResponse {
    required string term = 1;
    required int64 count = 2;
}

message CatalogQueryResponse {
    required string partition = 1;
    required string index = 2;
    required string field = 3;
    required string term = 4;
    required string json_props = 5;
}

message CommandResponse {
    required string response = 1;
}
